# AutoNeura

./: .gitignore  README.md  app_license_plate_recognition.py  base_color_detection.py  base_text_recognition.py  base_vehicle_attribute.py  base_vehicle_detection.py  main.py  main_license_plate.py  main_text_recognition.py  pyproject.toml  temp.json  temp.py
experimental/: exp_color_detection.ipynb  exp_doctr.py  exp_text_recognition.ipynb  exp_vehicle_attribute.py  exp_vehicle_detection.ipynb
resources/: images  videos
src/: class_template.py
src/app/license_plate_recognition/: __init__.py  helper.py  license_plate_recognition.py
src/app/text_recognition/: __init__.py  text_recognition.py
src/app/vehicle_counter/: vehicle_counter.py
src/base/: config.py
src/base/color_detection/: __init__.py  color_detection.py  helper.py
src/base/doctr_ocr/: __init__.py  doctr_ocr.py  helper.py
src/base/vehicle_attribute/: __init__.py  vehicle_attribute.py
src/base/yolo_license_plate_detection/: __init__.py  yolo_license_plate_detection.py
src/base/yolo_vehicle_detection/: __init__.py  yolo_vehicle_detection.py
src/utils/: files.py
