[project]
name = "autoneura"
version = "0.1.0"
description = ""
authors = [
    {name = "Erwin",email = "erwinwingyonata@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13.0"
dependencies = [
    "supervision (>=0.25.1,<0.26.0)",
    "ultralytics (>=8.3.99,<9.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-box (>=7.3.2,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
